Fixing search result table on mobiles, there was spacing issues with some of it appearing off screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,8 @@
 /* centered columns styles */
 .row-centered {
     text-align:center;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 .col-centered {
     display:inline-block;
@@ -66,6 +68,13 @@
   .stockStatusCol{
     width:15%;
   }
+
+  .row-centered {
+      text-align:center;
+      margin-left: -15px;
+      margin-right:-15px;
+  }
+
 }
 
 @media(max-width:767px) {
@@ -78,6 +87,7 @@
 
     .itemProductImage{
       width:70%;
+      margin-left: 0.1em;
     }
 
     .product-id > td{
